# agent-insights

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
apps/backend/: Cargo.toml  README.md
apps/backend/src/: lib.rs  main.rs
apps/backend/src/agents/: claude.rs  codex.rs  gemini.rs  mod.rs
apps/backend/src/api/: heatmap.rs
apps/backend/src/cache/: db.rs  mod.rs
apps/backend/src/domain/: heatmap.rs  record.rs
apps/backend/src/scanner/: mod.rs
apps/backend/src/services/: aggregate.rs  collect.rs  mod.rs
apps/backend/src/websocket/: mod.rs
apps/frontend/: index.html  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/components/: HeatmapChart.tsx  Toast.tsx
apps/frontend/src/hooks/: useWebSocket.ts
apps/frontend/src/services/: api.ts
apps/frontend/src/types/: insight.ts
docs/: ARCHITECTURE.md
src/: main.rs
src/agents/: claude.rs  codex.rs  gemini.rs
src/api/: mod.rs
src/cache/: db.rs
src/domain/: mod.rs  record.rs
src/services/: aggregate.rs
src/websocket/: mod.rs  watcher.rs
ui/: package.json
ui/src/components/: Dashboard.tsx  HeatmapChart.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/types/: insight.ts
